// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`babel macro styled tagged template literal function 1`] = `
"
const SomeComponent = styled('div')\`
          display: flex;
        \`;"
`;

exports[`babel macro styled tagged template literal member 1`] = `
"
const SomeComponent = styled.div\`
          display: flex;
        \`;"
`;
